--- a/webclient/app/views/login.html
+++ b/webclient/app/views/login.html
@@ -1,15 +1,14 @@
 <div class="col-md-3"></div>
 <form name="loginForm" class="col-md-6">
     <h2 class="form-signin-heading">Please sign in</h2>
+    <div class="alert alert-danger" ng-show="vm.errorMessage">
+        {{vm.errorMessage}}
+    </div>
     <label for="inputEmail" class="sr-only">Email address</label>
     <input type="email" id="inputEmail" class="form-control" ng-model="vm.user.email" placeholder="Email address" required="" autofocus="">
     <label for="inputPassword" class="sr-only">Password</label>
     <input type="password" id="inputPassword" class="form-control" ng-model="vm.user.password" placeholder="Password" required="">
-    <div class="checkbox">
-        <label>
-              <input type="checkbox" value="remember-me" ng-model="vm.remember"> Remember me
-          </label>
-    </div>
+
     <button class="btn btn-lg btn-primary btn-block" type="submit" ng-disabled="loginForm.$invalid" ng-click="vm.signIn()">Sign in</button>
 </form>
 <div class="col-md-3"></div>
